<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/favorites_test"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_favorite_test"
            app:tint="@color/greenIcon_test" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:contentDescription="Logo"
            app:srcCompat="@drawable/logoext" />

        <ImageView
            android:id="@+id/btn_cart"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cart_test"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_cart_test"
            app:tint="@color/greenIcon_test" />

    </LinearLayout>

    <!-- CONTENUTO (FRAGMENT) -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- NAVBAR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navbar_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.example.superspan.CurvedBottomBarView
            android:id="@+id/curved_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/nav_items_row"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4"
            android:elevation="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- HOME -->
            <LinearLayout
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:id="@+id/ic_home"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:tint="@color/greenIcon_test"
                    android:contentDescription="@string/home_test"
                    app:srcCompat="@drawable/ic_home_test" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_test"
                    android:textColor="@color/greenIcon_test"
                    android:textSize="13sp"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_prod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:id="@+id/ic_prod"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:tint="@color/greenIcon_test"
                    android:contentDescription="@string/favorites_test"
                    app:srcCompat="@drawable/ic_basket" />

                <TextView
                    android:id="@+id/tv_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prodotti"
                    android:textColor="@color/greenIcon_test"
                    android:textSize="13sp"/>
            </LinearLayout>

            <!-- CARRELLO -->
            <LinearLayout
                android:id="@+id/btn_coup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:id="@+id/ic_coup"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:tint="@color/greenIcon_test"
                    android:contentDescription="@string/cart_test"
                    app:srcCompat="@drawable/ic_coupon" />

                <TextView
                    android:id="@+id/tv_coup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coupon"
                    android:textColor="@color/greenIcon_test"
                    android:textSize="13sp"/>
            </LinearLayout>

            <!-- PROFILO -->
            <LinearLayout
                android:id="@+id/btn_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:id="@+id/ic_profile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:tint="@color/greenIcon_test"
                    android:contentDescription="@string/profile_test"
                    app:srcCompat="@drawable/ic_person_test" />

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_test"
                    android:textColor="@color/greenIcon_test"
                    android:textSize="13sp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>